# ChangeLog for media-sound/mpg123
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mpg123/ChangeLog,v 1.252 2012/04/12 20:41:39 radhermit Exp $

*mpg123-1.13.8 (12 Apr 2012)

  12 Apr 2012; Tim Harder <radhermit@gentoo.org> +mpg123-1.13.8.ebuild:
  Version bump.

  25 Mar 2012; Tim Harder <radhermit@gentoo.org> mpg123-1.13.7.ebuild:
  Fix whitespace.

*mpg123-1.13.7 (25 Mar 2012)

  25 Mar 2012; Tim Harder <radhermit@gentoo.org> +mpg123-1.13.7.ebuild:
  Version bump.

*mpg123-1.13.6 (11 Mar 2012)

  11 Mar 2012; Tim Harder <radhermit@gentoo.org> +mpg123-1.13.6.ebuild:
  Version bump.

*mpg123-1.13.5 (07 Mar 2012)

  07 Mar 2012; Tim Harder <radhermit@gentoo.org> +mpg123-1.13.5.ebuild:
  Version bump.

  16 Feb 2012; Magnus Granberg <zorry@gentoo.org> mpg123-1.13.4.ebuild:
  Disable mmx, sse, 3dnow, 3dnowext on hardened x86 bug 164504

  09 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> mpg123-1.13.4.ebuild:
  Reset dependency_libs to '' in libtool files (libltdl is using them to load
  output plugins) wrt #386577

*mpg123-1.13.4 (29 Aug 2011)

  29 Aug 2011; Tim Harder <radhermit@gentoo.org> +mpg123-1.13.4.ebuild:
  Version bump.

  18 Jul 2011; Tim Harder <radhermit@gentoo.org> -mpg123-1.12.1.ebuild,
  -mpg123-1.12.3.ebuild, -mpg123-1.12.5.ebuild, -mpg123-1.13.1.ebuild:
  Remove old.

  17 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> mpg123-1.13.2.ebuild:
  ppc/ppc64 stable wrt #365447

  19 Jun 2011; Raúl Porcel <armin76@gentoo.org> mpg123-1.13.2.ebuild:
  alpha/ia64/sparc stable wrt #365447

  15 May 2011; Markus Meier <maekke@gentoo.org> mpg123-1.13.2.ebuild:
  arm stable, bug #365447

  13 May 2011; Jeroen Roovers <jer@gentoo.org> mpg123-1.13.2.ebuild:
  Stable for HPPA (bug #365447).

  02 May 2011; Thomas Kahle <tomka@gentoo.org> mpg123-1.13.2.ebuild:
  x86 stable per bug 365447

  30 Apr 2011; Christoph Mende <angelos@gentoo.org> mpg123-1.13.2.ebuild: