@@ -8,6 +8,7 @@ DIST mpg123-1.13.5.tar.bz2 765333 RMD160 278923f2f66ceb861fc5b63c28c4de7d30cfe3f
 DIST mpg123-1.13.6.tar.bz2 765295 RMD160 162a25c2b1f45b2111db6bfcd2d21fd69e5b7638 SHA1 61ae9edb105d4051858fe636fb2e54bd275cdfd9 SHA256 fdb73b5bfbf4df572a98aacf38000694a5a8cbf05ecadf595ebdaf1423f61e01
 DIST mpg123-1.13.7.tar.bz2 765748 RMD160 12cffae34257e5f141bc4651b659acb9414536b5 SHA1 33b71c932b87004f3c8fed527b1f9a4b5f4337b2 SHA256 83e6ee82c665285542d5c12f94d77777612f527526efeccb64f54f825a6ab332
 DIST mpg123-1.13.8.tar.bz2 765682 RMD160 e5fb71b68885184977c2a1900b60e5aa50254f90 SHA1 ae6fe5f60502fb694527113dd7508ce042b7256b SHA256 16f201d14c83e33f1bcfc1d5b1cc9719218ed5c4f0e546f60d548bfa6034e4d3
+DIST mpg123-1.14.0.tar.bz2 793401 RMD160 4e92306ca63f280aec3593aa41c2f5c784a8cb1f SHA1 49a3d6791cc948336aa34914582f97ac6bb2a8ff SHA256 9b32fb841e6b4c86ecaf9b2e9a401192f3a53c9ccdb5ee9d6b2ae0a9f5385973
 EBUILD mpg123-1.13.2.ebuild 1903 RMD160 5226392d686b476dc907ce82c766262b95fe57e2 SHA1 80839bc499fd6fb850484e01af62330f829e89c0 SHA256 225220e69adcb142822261ce0fe941db952e644adddc8dd7c4004c5dbea519fc
 EBUILD mpg123-1.13.3.ebuild 1815 RMD160 97b7a79c7860153a94eaa7a6589c442177151d14 SHA1 206a232197968e8e2456811db39017c755d34253 SHA256 daf263146192cf95c690f4d602c53e8d1c1ca20c90eed0c0504bfd6edd646335
 EBUILD mpg123-1.13.4.ebuild 1993 RMD160 a0348f99afdf9d15cd06543fa4675a6d6e803c2a SHA1 a544da6b4888e9a707d1e7f973d4581f3c48074a SHA256 8ad2d75d6a85ee53e720399bb5d5d23520375de80e168f64c12637bba1a36e00
@@ -15,16 +16,17 @@ EBUILD mpg123-1.13.5.ebuild 1997 RMD160 5404c1990e00affd51da55a1d3bb0c253e27cc77
 EBUILD mpg123-1.13.6.ebuild 1997 RMD160 d820a413050d0602e7f517a724931827c6ce2634 SHA1 d8b4765b6de59ae3241387db6feee7e46a01477c SHA256 6c8a3169c4a9f47ca4bce53f129167b2c28e8f704842ff1efe88d04f79e11b33
 EBUILD mpg123-1.13.7.ebuild 1997 RMD160 de7bee988153be730cfdcd51977972bd3b331570 SHA1 d3e4cce62392dde83c14307850341b73dec9b6a8 SHA256 d1f8c1b6cf199394aecf9dc1845d889c408b772945128319f8f7d54f98955f04
 EBUILD mpg123-1.13.8.ebuild 1997 RMD160 dfcdb81c01ef3705f33ddc23333fa156a510021e SHA1 befd7b12f13600369838aa0b762a532d248f4251 SHA256 068108f451aa9b481b1609a4408a4551156248931fca66c4846eb44736db002b
-MISC ChangeLog 34526 RMD160 5efcd95c0f82a5c203f9e0264b95a0fcea5034bd SHA1 e49e959263d9efd19beeca19e68c284723170ac0 SHA256 84bd6ae8e51bcec9922a68930153b52ae1cecd96d0ed34b1ba6f55169dd73241
+EBUILD mpg123-1.14.0.ebuild 1997 RMD160 1501fbf4f00f2fa85186e7b043a83b417c513f32 SHA1 6efb7a28e6e7bd8c8162fde05277e179f4d61e09 SHA256 14b184df48e7898baccb05be6054570c6c1b1f64d5aa076872dfeb4eeb108e80
+MISC ChangeLog 34645 RMD160 dbfc41c2cc52e94bd4eec7bbd34e13eaeb3344e0 SHA1 fc65f38c4b71cba2dd806cfe260f3a85658355ef SHA256 cb7e6b9442f79d8adc143b90f073b31a510ce7e708dbab414a52cafea05d0561
 MISC metadata.xml 381 RMD160 fd13dbde791db976b9f3b24c5c48208fa36ac949 SHA1 cd4632372597169e6f5b8df1a431d6fa1b80b37d SHA256 e06c9759113a52a389217e0c66b76f2428ba9dc54910439a84ec241c825fb6d4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPhz4RAAoJEEqz6FtPBkyjtMQH/14WSZ5YjNNm6C2OX7Wf8H/h
-IL0EzJT0Ch0tTFLX94iQX5HroeF2eqrd0Y/9Aa0/LroYtcsnGmXPtMLpXZjpwAkQ
-yq38BbYSTs/knWTnHcwgH2hWFCf8cgs9CUrl+unb2avK2q7JxHd+5+0GoH7U+EAw
-s3h+IXiy1E87sVGKQ+XIldFapLAyQymKOdiMi2sw7ifSQDe490FSjkytHWXPal/f
-HBvlmE/MGlh5D7C4+5SYnbzHPldvV8vY+J6x7RJxSX2AOeBMjsmzevoafw10k5sI
-+C/AlxSX4IahdftnkXHfWmfOlbSrkYfjvicANsJRYiziZQS1WWHmb+8fARvQgXc=
-=pLL2
+iQEcBAEBCgAGBQJPn2ZPAAoJEEqz6FtPBkyj8V0H/i54qFnmz+WYh+lhQsVZorww
+CqCqne78PEPCc+9QNT/pUxNmmkmS/WQBVIKS53PsTzdgH5Zk1b5aI1zqYQZUbkp+
+37eo/UtPNPOuRVnbtDjko2VgTS/g9NcNyOCjIXjvPXpmPbEFEnYrN8+Mw4JRvwD9
+IRo76ljLuXmuJFQ40x7fTdwOY6YddeiCtZfJSa61VDRWato/8lkE5mCP+Rx1mqFD
+FU9H7ypur8nvj3PvHFpuYj12GFRa7B1Es80YHKUDKXhlmfyKuMSMiAte6DLQ3Qv1
++FC6bomzrQk/52XL6PxR3kwQq8XmHoa9XV3H/8GBdjfpB0CqilD/aVB+3ufR2jc=
+=dviH
 -----END PGP SIGNATURE-----
