@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/mpg123
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mpg123/ChangeLog,v 1.252 2012/04/12 20:41:39 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mpg123/ChangeLog,v 1.253 2012/05/01 04:27:42 radhermit Exp $
+
+*mpg123-1.14.0 (01 May 2012)
+
+  01 May 2012; Tim Harder <radhermit@gentoo.org> +mpg123-1.14.0.ebuild:
+  Version bump.
 
 *mpg123-1.13.8 (12 Apr 2012)
 
